@@ -1,4 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+  ~ See the NOTICE file distributed with this work for additional information
+  ~ regarding copyright ownership.
+  ~
+  ~ Licensed under the Apache License, Version 2.0 (the "License");
+  ~ you may not use this file except in compliance with the License.
+  ~ You may obtain a copy of the License at
+  ~
+  ~     http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing, software
+  ~ distributed under the License is distributed on an "AS IS" BASIS,
+  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ See the License for the specific language governing permissions and
+  ~ limitations under the License.
+  -->
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.breedinginsight</groupId>
@@ -35,27 +52,41 @@
     </developers>
 
     <properties>
-        <micronaut.version>1.2.8</micronaut.version>
-        <micronaut.security.version>1.3.0.BUILD-SNAPSHOT</micronaut.security.version>
-        <jdk.version>12</jdk.version>
+        <micronaut.version>1.3.3</micronaut.version>
+        <micronaut.security.version>1.3.2</micronaut.security.version>
+        <jdk.version>13</jdk.version>
         <maven.compiler.target>${jdk.version}</maven.compiler.target>
         <maven.compiler.source>${jdk.version}</maven.compiler.source>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <exec.mainClass>org.breedinginsight.api.Application</exec.mainClass>
-        <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
-        <maven-failsafe-plugin.version>2.22.2</maven-failsafe-plugin.version>
+        <maven-surefire-plugin.version>2.19.1</maven-surefire-plugin.version> <!-- 2.22.2 -->
+        <maven-failsafe-plugin.version>2.19.1</maven-failsafe-plugin.version>
+        <jvm.options>--enable-preview</jvm.options>
 
         <jooq.version>3.12.3</jooq.version>
         <postgres.version>42.2.6</postgres.version>
         <logback.version>1.2.3</logback.version>
         <lombok.version>1.18.10</lombok.version>
-        <jooq.config>src/main/resources/jooq.xml</jooq.config>
-        <flyway-config>src/main/resources/flyway.properties</flyway-config>
-        <flyway-db-config>src/main/resources/flyway.db.properties</flyway-db-config>
+        <gson.version>2.8.6</gson.version>
+        <spock.version>1.1.2</spock.version>
+        <geojson-jackson.version>1.14</geojson-jackson.version>
+        <apache-commons-csv.version>1.8</apache-commons-csv.version>
+        <apache-poi.version>4.1.2</apache-poi.version>
+        <apache-poi-ooxml.version>4.1.2</apache-poi-ooxml.version>
+        <apache-commons-lang.version>3.10</apache-commons-lang.version>
     </properties>
 
     <profiles>
+        <profile>
+            <id>default</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <db.config>src/build/build.properties</db.config>
+            </properties>
+        </profile>
         <profile>
             <id>dev</id>
             <activation>
@@ -65,8 +96,19 @@
                 </property>
             </activation>
             <properties>
-                <jooq.config>src/main/resources/jooq.dev.xml</jooq.config>
-                <flyway-db-config>src/main/resources/flyway.db.dev.properties</flyway-db-config>
+                <db.config>src/build/build.dev.properties</db.config>
+            </properties>
+        </profile>
+        <profile>
+            <id>test</id>
+            <activation>
+                <property>
+                    <name>test</name>
+                    <value>true</value>
+                </property>
+            </activation>
+            <properties>
+                <db.config>src/build/build.test.properties</db.config>
             </properties>
         </profile>
     </profiles>
@@ -75,6 +117,16 @@
         <repository>
             <id>jcenter.bintray.com</id>
             <url>https://jcenter.bintray.com</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository> <!-- repo where micronaut snapshots are deployed -->
+            <id>jfrog-snapshot</id>
+            <url>https://oss.jfrog.org/artifactory/jfrog-dependencies</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
         </repository>
     </repositories>
 
@@ -188,6 +240,12 @@
         </dependency>
 
         <dependency>
+            <groupId>de.grundid.opendatalab</groupId>
+            <artifactId>geojson-jackson</artifactId>
+            <version>${geojson-jackson.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
             <version>4.2.2</version>
@@ -214,14 +272,103 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>io.micronaut.test</groupId>
+            <artifactId>micronaut-test-spock</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>3.2.4</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${gson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers</artifactId>
+            <version>1.13.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.kowalski</groupId>
+            <artifactId>fannypack</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.brapi</groupId>
+            <artifactId>brapi-client</artifactId>
+            <version>2.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.brapi</groupId>
+            <artifactId>brapi-pheno-model</artifactId>
+            <version>2.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.brapi</groupId>
+            <artifactId>brapi-core-model</artifactId>
+            <version>2.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>${apache-commons-csv.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>${apache-poi.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>${apache-poi-ooxml.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${apache-commons-lang.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tika</groupId>
+            <artifactId>tika-app</artifactId>
+            <version>1.24.1</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>properties-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>read-project-properties</goal>
+                        </goals>
+                        <phase>validate</phase>
+                    </execution>
+                </executions>
+                <configuration>
+                    <files>
+                        <file>${db.config}</file>
+                    </files>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
@@ -233,7 +380,18 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
-                            <transformers>
+	                    <filters>
+                                <filter>
+                                    <artifact>*:*</artifact>
+                                    <excludes>
+                                        <exclude>META-INF/*.SF</exclude>
+                                        <exclude>META-INF/*.DSA</exclude>
+                                        <exclude>META-INF/*.RSA</exclude>
+                                    </excludes>
+                                </filter>
+                            </filters>	
+				
+			    <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>${exec.mainClass}</mainClass>
                                 </transformer>
@@ -264,15 +422,14 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>12</source>
-                    <target>12</target>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
                 </configuration>
             </plugin>
         <plugin>
             <groupId>org.jooq</groupId>
             <artifactId>jooq-codegen-maven</artifactId>
             <version>${jooq.version}</version>
-
             <executions>
                 <execution>
                     <goals>
@@ -282,15 +439,76 @@
             </executions>
 
             <configuration>
-                <configurationFile>${jooq.config}</configurationFile>
+                <jdbc>
+                    <driver>org.postgresql.Driver</driver>
+                    <url>jdbc:postgresql://${DB_SERVER}/${DB_NAME}</url>
+                    <user>${DB_USER}</user>
+                    <password>${DB_PASSWORD}</password>
+                </jdbc>
+                <generator>
+                    <name>org.breedinginsight.generation.JooqDaoGenerator</name>
+                    <database>
+                        <name>org.jooq.meta.postgres.PostgresDatabase</name>
+                        <includes>.*</includes>
+                        <inputSchema>public</inputSchema>
+                        <includeTables>true</includeTables>
+                        <includeUDTs>true</includeUDTs>
+                        <includeRoutines>false</includeRoutines>
+                        <includePrimaryKeys>true</includePrimaryKeys>
+                        <includeUniqueKeys>true</includeUniqueKeys>
+                        <includeForeignKeys>true</includeForeignKeys>
+                        <includeCheckConstraints>true</includeCheckConstraints>
+                        <includeIndexes>false</includeIndexes>
+                        <excludes>
+                            flyway_schema_history|base_entity|base_track_edit_entity|spatial_ref_sys
+                        </excludes>
+                    </database>
+
+                    <strategy>
+                        <matchers>
+                            <tables>
+                                <table>
+                                    <pojoClass>
+                                        <transform>PASCAL</transform>
+                                        <expression>$0_ENTITY</expression>
+                                    </pojoClass>
+                                    <tableClass>
+                                        <transform>PASCAL</transform>
+                                        <expression>$0_TABLE</expression>
+                                    </tableClass>
+                                </table>
+                            </tables>
+                        </matchers>
+                    </strategy>
+
+                    <target>
+                        <packageName>org.breedinginsight.dao.db</packageName>
+                        <directory>target/generated-sources/jooq</directory>
+                    </target>
+                    <generate>
+                        <pojos>true</pojos>
+                        <daos>true</daos>
+                        <fluentSetters>false</fluentSetters>
+                        <javaTimeTypes>true</javaTimeTypes>
+                    </generate>
+                </generator>
             </configuration>
+            <dependencies>
+                <dependency>
+                    <groupId>org.breedinginsight</groupId>
+                    <artifactId>bi-jooq-codegen</artifactId>
+                    <version>1.0-SNAPSHOT</version>
+                </dependency>
+            </dependencies>
         </plugin>
         <plugin>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-maven-plugin</artifactId>
             <version>6.0.0</version>
             <configuration>
-                <configFiles>${flyway-config},${flyway-db-config}</configFiles>
+                <url>jdbc:postgresql://${DB_SERVER}/${DB_NAME}</url>
+                <user>${DB_USER}</user>
+                <password>${DB_PASSWORD}</password>
             </configuration>
             <dependencies>
                 <dependency>
@@ -307,11 +525,40 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven-surefire-plugin.version}</version>
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.junit.platform</groupId>
+                            <artifactId>junit-platform-surefire-provider</artifactId>
+                            <version>1.1.0</version>
+                        </dependency>
+                        <dependency>
+                            <groupId>org.junit.jupiter</groupId>
+                            <artifactId>junit-jupiter-engine</artifactId>
+                            <version>5.1.0</version>
+                        </dependency>
+                    </dependencies>
                     <configuration>
+                        <redirectTestOutputToFile>false</redirectTestOutputToFile>
+                            <argLine>${jvm.options}</argLine>
                         <detail>true</detail>
                         <includes>
                             <include>%regex[.*]</include>
                         </includes>
+                        <systemPropertyVariables>
+                            <oauth.clientId>test</oauth.clientId>
+                            <oauth.clientSecret>test</oauth.clientSecret>
+                            <jwt.secret>test</jwt.secret>
+                            <jwt.cookie.domain>localhost</jwt.cookie.domain>
+                            <micronaut.server.port>${API_INTERNAL_TEST_PORT}</micronaut.server.port>
+                            <db.default.host>${DB_SERVER}</db.default.host>
+                            <db.default.name>${DB_NAME}</db.default.name>
+                            <db.default.username>${DB_USER}</db.default.username>
+                            <db.default.password>${DB_PASSWORD}</db.default.password>
+                            <brapi.server.core-url>${BRAPI_CORE_URL}</brapi.server.core-url>
+                            <brapi.server.pheno-url>${BRAPI_PHENO_URL}</brapi.server.pheno-url>
+                            <brapi.server.geno-url>${BRAPI_GENO_URL}</brapi.server.geno-url>
+                            <brapi.server.reference-source>breeding-insight.org</brapi.server.reference-source>
+                        </systemPropertyVariables>
                     </configuration>
                 </plugin>
                 <plugin>
